--- a/css/styles.css
+++ b/css/styles.css
@@ -17,10 +17,10 @@ a {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #2e2f42;
+  color: #4d5ae5;
 }
 .logo-part {
-  color: #4d5ae5;
+  color: #2e2f42;
 }
 .navigation-list-item {
   font-weight: 500;
@@ -42,6 +42,7 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  font-style: normal;
 }
 .contacts-item:focus {
   color: #404bbf;
@@ -55,13 +56,12 @@ a {
 .section-one-hedder {
   font-weight: 700;
   font-size: 56px;
-  line-height: 1.07143;
+  line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
 }
-
-.section-one-button-text {
+.section-one-button {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -70,11 +70,11 @@ a {
   background-color: #4d5ae5;
   cursor: pointer;
 }
-.section-one-button-text:focus {
+.section-one-button:focus {
   background-color: #404bbf;
 }
 
-.section-one-button-text:hover {
+.section-one-button:hover {
   background-color: #404bbf;
 }
 .section-two-list-heder {
@@ -97,12 +97,16 @@ a {
 .section-three-header {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11111;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  text-transform: capitalize;
 }
-.section-three-list-header {
+.section-three-list-item {
+  background-color: #ffffff;
+}
+. .section-three-list-header {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -121,10 +125,11 @@ a {
 .section-four-header {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11111;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  text-transform: capitalize;
 }
 .section-four-list-header {
   font-weight: 500;
@@ -151,13 +156,14 @@ a {
   color: #f4f4fd;
 }
 .footer-logo {
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #f4f4fd;
+  color: #4d5ae5;
 }
 .footer-logo-part {
-  color: #4d5ae5;
+  color: #f4f4fd;
 }
