--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,7 @@ a {
 .section-three-list-item {
   background-color: #ffffff;
 }
-. .section-three-list-header {
+.section-three-list-header {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
